--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
     
     <licenses>
         <license>
-            <name>GNU LESSER GENERAL PUBLIC LICENSE 2.1</name>
-            <url>https://github.com/Chrriis/RRDiagram/blob/master/RRDiagram/licence.txt</url>
+            <name>Apache License Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
