--- a/RRDiagram/documentation/build.xml
+++ b/RRDiagram/documentation/build.xml
@@ -4,8 +4,8 @@
   <target name="createJavadoc" description="Create the javadoc">
     <delete dir="documentation/javadoc"/>
     <javadoc destdir="documentation/javadoc" windowtitle="RR Diagram">
-      <packageset dir="src">
-        <include name="chrriis/**"/>
+      <packageset dir="../src/main/java">
+        <include name="net/**"/>
       </packageset>
       <link offline="true" href="http://java.sun.com/javase/6/docs/api/" packagelistloc="documentation/javadoc-package-lists/jdk"/>
     </javadoc>
