[#4, #15] Build script to follow new project structure.

--- a/RRDiagram/Release/build.xml
+++ b/RRDiagram/Release/build.xml
@@ -10,7 +10,7 @@
       <zipfileset dir=".." includes="LICENSE.txt"/>
       <zipfileset dir="Release" includes="readme.txt,changelog.txt"/>
       <!-- Binaries -->
-      <zipfileset dir=".." includes="RRDiagram.jar"/>
+      <zipfileset dir="." includes="RRDiagram.jar"/>
       <!-- Library sources -->
       <zipfileset dir="../src/main/java" prefix="src"/>
       <!-- Documentation -->
