--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,9 @@
     </licenses>
     
     <scm>
-        <developerConnection>https://github.com/Chrriis/RRDiagram.git</developerConnection>
+        <developerConnection>scm:git:git@github.com:Chrriis/RRDiagram.git</developerConnection>
         <url>https://github.com/Chrriis/RRDiagram.git</url>
-        <connection>git://github.com/Chrriis/RRDiagram.git</connection>
+        <connection>scm:git:git@github.com:Chrriis/RRDiagram.git</connection>
     </scm>
     
     <issueManagement>
@@ -67,26 +67,6 @@
                     <debuglevel>lines,vars,source</debuglevel>
                 </configuration>
             </plugin>
-
-            <plugin>
-                <inherited>true</inherited>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>3.0.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <excludeResources>true</excludeResources>
-                    <useDefaultExcludes>true</useDefaultExcludes>
-                </configuration>
-            </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
@@ -98,6 +78,17 @@
         </plugins>
     </build>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+
     <profiles>
         <profile>
             <!-- This profile can be used to release the artifact to Maven Central -->
@@ -105,18 +96,22 @@
             <build>
                 <plugins>
                     <plugin>
+                        <inherited>true</inherited>
                         <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.6</version>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>3.0.1</version>
                         <executions>
                             <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
+                                <id>attach-sources</id>
                                 <goals>
-                                    <goal>sign</goal>
+                                    <goal>jar</goal>
                                 </goals>
                             </execution>
                         </executions>
+                        <configuration>
+                            <excludeResources>true</excludeResources>
+                            <useDefaultExcludes>true</useDefaultExcludes>
+                        </configuration>
                     </plugin>
                     <plugin>
                         <inherited>true</inherited>
@@ -138,6 +133,20 @@
                             <show>protected</show>
                             <notree>true</notree>
                         </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
